RESOLVED FIXED190418
Regression(PSON): Assertion hit under WebPageProxy::didNavigateWithNavigationData()
https://bugs.webkit.org/show_bug.cgi?id=190418
Summary Regression(PSON): Assertion hit under WebPageProxy::didNavigateWithNavigation...
Chris Dumez
Reported 2018-10-09 16:43:34 PDT
Assertion hit under WebPageProxy::didNavigateWithNavigationData(): ASSERTION FAILED: frame->page() == this /Volumes/Data/WebKit/OpenSource/Source/WebKit/UIProcess/WebPageProxy.cpp(4274) : void WebKit::WebPageProxy::didNavigateWithNavigationData(const WebKit::WebNavigationDataStore &, uint64_t) 1 0x1033ecd59 WTFCrash 2 0x10db8343b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x10e411e64 WebKit::WebPageProxy::didNavigateWithNavigationData(WebKit::WebNavigationDataStore const&, unsigned long long) 4 0x10ece5c83 void IPC::callMemberFunctionImpl<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(WebKit::WebNavigationDataStore const&, unsigned long long), std::__1::tuple<WebKit::WebNavigationDataStore, unsigned long long>, 0ul, 1ul>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(WebKit::WebNavigationDataStore const&, unsigned long long), std::__1::tuple<WebKit::WebNavigationDataStore, unsigned long long>&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul>) 5 0x10ece5930 void IPC::callMemberFunction<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(WebKit::WebNavigationDataStore const&, unsigned long long), std::__1::tuple<WebKit::WebNavigationDataStore, unsigned long long>, std::__1::integer_sequence<unsigned long, 0ul, 1ul> >(std::__1::tuple<WebKit::WebNavigationDataStore, unsigned long long>&&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(WebKit::WebNavigationDataStore const&, unsigned long long)) 6 0x10ecc4ca8 void IPC::handleMessage<Messages::WebPageProxy::DidNavigateWithNavigationData, WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(WebKit::WebNavigationDataStore const&, unsigned long long)>(IPC::Decoder&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(WebKit::WebNavigationDataStore const&, unsigned long long)) 7 0x10ecb9fe8 WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 8 0x10dc1e20a IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 9 0x10e1fc964 WebKit::ChildProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 10 0x10e47084d WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 11 0x10dbca37a IPC::Connection::dispatchMessage(IPC::Decoder&) 12 0x10dbbd031 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 13 0x10dbc7911 IPC::Connection::dispatchIncomingMessages() 14 0x10dbe76e2 IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14::operator()() 15 0x10dbe7609 WTF::Function<void ()>::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14>::call() 16 0x103413f4d WTF::Function<void ()>::operator()() const 17 0x10346c793 WTF::RunLoop::performWork() 18 0x10346d124 WTF::RunLoop::performWork(void*) 19 0x7fff4e9ce195 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 20 0x7fff4e9ce13b __CFRunLoopDoSource0 21 0x7fff4e9b1bd5 __CFRunLoopDoSources0 22 0x7fff4e9b117e __CFRunLoopRun 23 0x7fff4e9b0a68 CFRunLoopRunSpecific 24 0x7fff4dc49895 RunCurrentEventLoopInMode 25 0x7fff4dc495cb ReceiveNextEventCommon 26 0x7fff4dc49348 _BlockUntilNextEventMatchingListInModeWithFilter 27 0x7fff4bf05f53 _DPSNextEvent 28 0x7fff4bf04cf2 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] 29 0x101099050 -[BrowserApplication nextEventMatchingMask:untilDate:inMode:dequeue:] 30 0x7fff4befed55 -[NSApplication run] 31 0x7fff4beee48f NSApplicationMain
Attachments
Patch (18.42 KB, patch)
2018-10-09 16:59 PDT, Chris Dumez
no flags
Patch (18.47 KB, patch)
2018-10-10 08:56 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-10-09 16:43:49 PDT
Chris Dumez
Comment 2 2018-10-09 16:59:48 PDT
EWS Watchlist
Comment 3 2018-10-09 17:02:03 PDT
Attachment 351927 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:310: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:318: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 2 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 4 2018-10-10 08:56:25 PDT
EWS Watchlist
Comment 5 2018-10-10 08:57:42 PDT
Attachment 351966 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:310: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:318: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 2 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 6 2018-10-10 10:53:40 PDT
Comment on attachment 351966 [details] Patch r=me
WebKit Commit Bot
Comment 7 2018-10-10 11:21:21 PDT
Comment on attachment 351966 [details] Patch Clearing flags on attachment: 351966 Committed r237008: <https://trac.webkit.org/changeset/237008>
WebKit Commit Bot
Comment 8 2018-10-10 11:21:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.